src/com/github/kumaraman21/intellijbehave/parser/story.bnf
{
  parserClass="com.github.kumaraman21.intellijbehave.parser.StoryParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Story"
  psiImplClassSuffix="Impl"
  psiPackage="com.github.kumaraman21.intellijbehave.psi"
  psiImplPackage="com.github.kumaraman21.intellijbehave.psi.impl"

  elementTypeHolderClass="com.github.kumaraman21.intellijbehave.parser.StoryTypes"
  elementTypeClass="com.github.kumaraman21.intellijbehave.parser.StoryElementType"
  tokenTypeClass="com.github.kumaraman21.intellijbehave.parser.StoryTokenType"
}

storyFile ::= (narrative CRLF+ scenario* | BAD_CHARACTER)
narrative ::= (STORY_DESCRIPTION | WHITE_SPACE)+
scenario ::= scenarioHeader (metaInfo | example | given | when | then | table | COMMENT | WHITE_SPACE)+
scenarioHeader ::= SCENARIO_TYPE SCENARIO_TEXT CRLF
metaInfo ::= META_TYPE META_KEY META_TEXT CRLF
example ::= EXAMPLE_TYPE EXAMPLE_TEXT CRLF
given ::= GIVEN_TYPE givenStep
givenStep ::= GIVEN_STEP_TYPE STEP_TEXT CRLF
when ::= WHEN_TYPE whenStep
whenStep ::= WHEN_STEP_TYPE STEP_TEXT CRLF
then ::= THEN_TYPE thenStep
thenStep ::= THEN_STEP_TYPE STEP_TEXT CRLF
table ::= TABLE_DELIM (TABLE_CELL TABLE_DELIM)+
